// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary wiht 1 expense 1`] = `
<div>
  <h2>
    Viewing: 
    1
     
    expense
     totaling: 
    $1.95
  </h2>
</div>
`;

exports[`should correctly render ExpensesSummary wiht multiple expenses 1`] = `
<div>
  <h2>
    Viewing: 
    3
     
    expenses
     totaling: 
    $1,142.45
  </h2>
</div>
`;
